tests/baselines/reference/parserMissingToken1.errors.txt
==== tests/cases/compiler/parserMissingToken1.ts (2 errors) ====
    a / finally
        ~~~~~~~
!!! parserMissingToken1.ts(1,5): error TS1005: 'expression' expected.
    ~
!!! parserMissingToken1.ts(1,1): error TS2095: Cannot find name 'a'.